# cds-mini-projects

./: .gitignore  Another_copy_of_M2_NB_MiniProject_1_LinearRegression_Regularization.ipynb  M1_MP1_NB_Hypothesis_Testing.ipynb  M2_NB_MiniProject_1_LinearRegression_Regularization.ipynb  M2_NB_MiniProject_3_Emotion_Classification_from_Speech.ipynb  M2_NB_MiniProject_5_Customer_Segmentation_Kmeans.ipynb  M3_NB_MiniProject_1_Image_Classification_MLP.ipynb  M3_NB_MiniProject_2_Face_Mask_Detection.ipynb  M3_NB_MiniProject_3_Video_Classification.ipynb  M4_NB_MiniProject_1_Linear_Algebra_and_Calculus.ipynb  M5_NB_MiniProject_01_MLR_MPI_OpenMP.ipynb  M5_NB_MiniProject_01_MLR_MPI_OpenMP_Neeti_Archana.ipynb  hello.py  pyproject.toml
capstone-project/: ideas.md
m1/: M1_MP1_NB_Hypothesis_Testing (4).ipynb  M1_MP1_NB_Hypothesis_Testing.ipynb  README.md
m2/: M2_NB_MiniProject_3_Emotion_Classification_from_Speech.ipynb  M2_NB_MiniProject_5_Customer_Segmentation_Kmeans.ipynb
m2/mini-project-1/: M2_NB_MiniProject_1_LinearRegression_Regularization.ipynb  M2_NB_MiniProject_1_LinearRegression_Regularization__.ipynb  README.md  _M2_NB_MiniProject_1_LinearRegression_Regularization.ipynb  pyproject.toml  utility.py
m2/mini-project-2/: M3_Case_Study_NB_SHAP_Values.ipynb  M3_NB_MiniProject_2_Credit_risk_modelling_Logistic_Regression.ipynb  hello.py  pyproject.toml
m2/mini-project-2/playpen/: M3_NB_MiniProject_2_Credit_risk_modelling_Logistic_Regression.ipynb
m2/mini-project-2/prof-notebook-shap/: SHAP.ipynb  pyproject.toml
m2/mini-project-2/project/: M3_NB_MiniProject_2_Credit_risk_modelling_Logistic_Regression.ipynb  pyproject.toml
m2/mini-project-2/study-notebook/: M3_Case_Study_NB_SHAP_Values.ipynb  pandas-classification.py  pyproject.toml
m2/mini-project-3/: M2_Supplementary_Audio_feature_extraction.ipynb
m2/mini-project-3/project/: Kaggle_Testset_Predictions.csv  M2_NB_MiniProject_3_Emotion_Classification_from_Speech.ipynb  pyproject.toml
m2/mini-project-3/study_notebook/: M2_Supplementary_Audio_feature_extraction.ipynb  README.md  pyproject.toml
m2/mini-project-4/: M2_MP4_NB_Employee_Attrition_Prediction.ipynb  catboost_prediction.csv  pyproject.toml  utility.py  xgboost_prediction.csv  xgboost_prediction_f1_68.csv  xgboost_prediction_f1cv_71.csv
m2/mini-project-4/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
m2/mini-project-4/catboost_info/learn/: events.out.tfevents
m2/mini-project-4/catboost_info/test/: events.out.tfevents
m2/mini-project-5/: M2_NB_MiniProject_5_Customer_Segmentation_Kmeans.ipynb  Online_Retail_Test.csv  pyproject.toml
m3/: M3_NB_MiniProject_2_Credit_risk_modelling_Logistic_Regression.ipynb
m3/archana-mp3/: M3_NB_MiniProject_2_Face_Mask_Detection.ipynb  M3_NB_MiniProject_3_Video_Classification.ipynb  main.py  pyproject.toml
m3/learning_video_classification_1/: video_classification.ipynb
m3/mini-project-1/: M3_NB_MiniProject_1_Image_Classification_MLP.ipynb  hello.py  pyproject.toml
m3/mini-project-2/: M3_NB_MiniProject_2_Face_Mask_Detection.ipynb  pyproject.toml
m3/mini-project-3/: M3_NB_MiniProject_3_Video_Classification.ipynb  README.md  main.py  pyproject.toml  requirements.txt  video-classification-helper-code.py
m4/: Copy_of_M4_NB_MiniProject_1_Linear_Algebra_and_Calculus (2).ipynb
m4/mini-project-1/: M4_NB_MiniProject_1_Linear_Algebra_and_Calculus.ipynb  M4_SNB_MiniProject_1_Linear_Algebra_and_Calculus.ipynb  pyproject.toml
m5/: Copying Data Between Kubernetes PVs Us.md  MLOps-Readme.md  README.md
m5/mini-project-1/: BroadcastingDataframe.py  GatherringDataframe.py  M5_NB_MiniProject_01_MLR_MPI_OpenMP.ipynb  M5_Supplementary_NB_MPI_for_Dataframe.ipynb  README.md  ScatteringDataframe.py  create_communicator.py  mpi_support_script.py  passing_dataframe.py  power_output_lin_reg_using_mpi.py  projects_functions_library.py  pyproject.toml  utility.py
m5/mini-project-2/: M5_NB_MiniProject_02_Fare_Amount_Prediction_Using_Dask.ipynb  pyproject.toml
m5/mp-1/: M5_NB_MiniProject_01_MLR_MPI_OpenMP.ipynb  M5_Supplementary_NB_MPI_for_Dataframe.ipynb
