[project]
name = "mini-project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "llvmlite>=0.43.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
]
