[project]
name = "mini-project-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.7",
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "scikit-learn>=1.6.1",
    "scipy==1.12",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
]

