[project]
name = "mini-project-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio==2.4.1",
    "ipykernel>=6.29.5",
    "keras>=3.9.0",
    "moviepy>=0.2.3.5",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "tensorflow>=2.18.0",
]
