[project]
name = "mini-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.7.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "metrics>=0.0.2",
    "mpi4py>=4.0.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
