[project]
name = "study-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "ipykernel>=6.29.5",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "soundfile>=0.13.0",
]
